# misc-test

./: .gitignore
ai-ops-resources/: langchain_agent_tavily_demo.ipynb  pm-chatbot.py
ai-ops-resources/agent-bot/: .env  Dockerfile  agent_handoff.py  mcp_servers_config.json  requirements.txt  runbooks.json  test.md
ai-ops-resources/monitoring/: Dockerfile  alert-forwarder.py  k8s-alert-forwarder.yaml  requirements.txt  test-alert-failed.yaml  test-alert.yaml  test_alert_forwarder.py
ai-ops-resources/monitoring/kube-prometheus-stack/: values.yaml
pm-chatbot/: .gitignore  package.json
pm-chatbot/agent/: pyproject.toml
pm-chatbot/agent/src/: __init__.py  agent.py  data_context.py  main.py  utils.py
pm-chatbot/src/app/: page.tsx
pm-chatbot/src/app/api/copilotkit/: route.ts
pm-chatbot/src/lib/: types.ts
