[project]
name = "agent"
version = "0.1.0"
description = "PM Assistant - PydanticAI agent for project management queries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn",
    "pydantic-ai-slim[ag-ui]",
    "pydantic-ai-slim[openai]",
    "python-dotenv",
    "logfire>=4.10.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "openpyxl>=3.1.0",
]
